--- a/common/src/main/resources/reference.conf
+++ b/common/src/main/resources/reference.conf
@@ -164,6 +164,12 @@ akka {
   }
 }
 
+
+akka.persistence {
+  journal.plugin = "cassandra-journal"
+  snapshot-store.plugin = "cassandra-snapshot-store"
+}
+
 cassandra-journal {
   contact-points = [127.0.0.1]
   keyspace = "cluster_example_akka_journal"
